new_tests/semantics/type/bad/031_UE2.cm

def a:Int = 3 
not a 
